[package]
name = "radio"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.5.0", features = ["full"] }
anni-backend = { git = "https://github.com/project-anni/anni" }
anni-repo = { git = "https://github.com/project-anni/anni", features = ["arc"] }
rand = "0.8.3"
